Added doc comments for swagger
