# cmd/api/health.go
@@ -7,8 +7,21 @@ import (
 /*
 This file is created to check if health-check API
 is proper or not
+
+Imp note - For swagger ensure we are not having a space before func and
+swagger comments or it wont work
 */
 
+// healthCheckHandler provides a simple health check for the API.
+//
+//	@Summary		Health Check
+//	@Description	Returns the status of the API along with environment and version details.
+//	@Tags			Health
+//	@Accept			json
+//	@Produce		json
+//	@Success		200	{object}	map[string]string	"API is healthy"
+//	@Failure		500	{object}	error				"Internal server error"
+//	@Router			/health [get]
 func (app *application) healthCheckHandler(w http.ResponseWriter, r *http.Request) {
 	// Create JSON response
 	response := map[string]string{
